logs/slurm/other/eval_deit_4.2G_11025241.err
  File "/u/ssoma1/mahdi/Isomorphic-Pruning/evaluate.py", line 167
    else:
    ^
SyntaxError: invalid syntax
